--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "gh-pages": "git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
+    "@vuex-orm/core": "^0.36.4",
     "core-js": "^3.6.5",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
-    "vue": "^2.6.11",
+    "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
-    "vuex": "^3.4.0",
+    "vuex": "^3.6.2",
     "vuex-class": "^0.3.2"
   },
   "devDependencies": {
